# BERN2

./: .gitignore  pyproject.toml  server.py
scripts/: run_bern2.sh  stop_bern2.sh
systemd/: bern2.service  disease.service  gene.service  gnormplus.service  multi_ner.service  tmvar2.service
