[tool.poetry]
name = "bern2"
version = "v1.1"
description = ""
authors = ["Mujeen Sung"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.2"
pandas = "1.1.3"
requests = "2.24.0"
xmltodict = "0.12.0"
tqdm = "4.61.2"
transformers = "4.9.0"
accelerate = "0.3.0"
pymongo = "3.12.0"
Flask = "2.1.0"
faiss = "^1.5.3"
bioregistry = "^0.5.142"
faiss-gpu = "^1.7.2"
faiss-cpu-noavx2 = "^1.6.3"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
